Se dejan funcionales los formularios de contacto, solicitud de sicios, etc, se agrega mapa y cambios en front con animaciones

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -212,6 +212,8 @@ img {
 /* Tarjetas de Beneficios: Zoom suave */
 .benefit-card {
   transition: transform var(--transition-normal), box-shadow var(--transition-normal) !important;
+  border-radius: 1rem !important;
+  overflow: hidden !important;
 }
 
 .benefit-card:hover {
